--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
-<router-outlet class="m-3"></router-outlet>
+
+<router-outlet></router-outlet>
 <app-home></app-home>
 <app-footer></app-footer>
