--- a/src/app/components/layout/header.component.html
+++ b/src/app/components/layout/header.component.html
@@ -1,7 +1,7 @@
-<!-- <div class="scroll-up-btn">
+<div class="scroll-up-btn">
     <i class="fa fa-angle-up"></i>
 </div>
-<nav class="navbar mt-2">
+<nav class="navbar">
     <div class="max-width">
         <div class="logo"><a href="#">{{usuario.nombre}}.Dev</a></div>
         <ul class="menu">
@@ -13,19 +13,7 @@
             <li><a href="#teams" class="menu-btn ">Login</a></li>
         </ul>
         <div class="menu-btn">
-            <i class="fa fa-bars"></i>
+            <i class="fas fa-bars"></i>
         </div>
     </div>
 </nav>
-
-<!-- HOME SECTION 
-<section class="home" id="home">
-    <div class="max-width">
-        <div class="home-content">
-            <div class="text-1">Hola, mi nombre es </div>
-            <div class="text-2"><span><</span><span>/</span>{{usuario.nombre}} {{usuario.apellido}} <span>></span></div>
-            <div class="text-3">Yo Soy  <span class="typing">{{usuario.titulo}}</span></div>
-            <a href="https://github.com/ignam03" target="_blank"><i class="fa fa-github"></i> Github</a>
-        </div>
-    </div>
-</section> -->
