componentes edu,exp,acerca, banner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <router-outlet></router-outlet>
 <app-header></app-header>
+<app-banner></app-banner>
 <app-home></app-home>
 <app-footer></app-footer>
