component acerca de logica y demas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <router-outlet></router-outlet>
 <app-header></app-header>
 <app-banner></app-banner>
+<app-acerca-de></app-acerca-de>
 <app-home></app-home>
 <app-footer></app-footer>
