mejor visual y eliminacion de background

--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,14 +1,14 @@
 <!-- ABOUT SECTION -->
 <section class="about" id="about">
     <div class="max-width">
-        <h2 class="title">About me</h2>
+        <h2 class="title">Sobre mi</h2>
         <div class="about-content">
             <div class="column left">
                 <img src="https://i.ibb.co/519RzY5/Profile-Toon.jpg" alt="" />
             </div>
             <div class="column right">
                 <div class="text">
-                    I am {{usuario.nombre}} and I'm a <span class="typing-2">Desarrollador de Software</span>
+                    Yo soy {{usuario.nombre}} and I'm a <span class="typing-2">Desarrollador de Software</span>
                 </div>
                 <p>
                     Graduated with a Bachelor's degree in Mechanical Engineering as I
