routing aplicado,login page, components mejorados

--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,1 +1,109 @@
-<p>educacion works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-10 m-auto">
+            <h2 class="text-center">Educacion/Experiencia</h2>
+            <div class="container">
+                <div class="timeline clearfix">
+                    <div class="vertical-line">
+                        <div id="post-1" class="vesti-col timeline-post">
+                            <div class="vesti-content-wrapper">
+                                <div class="photo">
+                                    <img
+                                        src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-2_zpse1ce0jta_sktijn.jpg">
+                                    <div class="vesti-date-wrapper">
+                                        <div class="vesti-date">
+                                            <span class="day">14</span>
+                                            <br>
+                                            <span class="month">DEC</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="vesti-desc">
+                                    <a class="desc-a" href="#">
+                                        <h4>Deleniti dignissimos perferendis</h4>
+                                    </a>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas necessitatibus
+                                        laboriosam est,
+                                        suscipit recusandae. Velit eius voluptatem non, fuga numquam a, quisquam sint
+                                        autem
+                                        praesentium laudantium explicabo eligendi.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="post-2" class="vesti-col timeline-post">
+                            <div class="vesti-content-wrapper">
+                                <div class="photo">
+                                    <img
+                                        src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-1_zpsergopcgw_w5k5bz.jpg">
+                                    <div class="vesti-date-wrapper">
+                                        <div class="vesti-date">
+                                            <span class="day">25</span>
+                                            <br>
+                                            <span class="month">NOV</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="vesti-desc">
+                                    <a class="desc-a" href="#">
+                                        <h4>Facilis ipsa fugit</h4>
+                                    </a>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum suscipit eaque,
+                                        quasi aperiam
+                                        officiis ex, odio quisquam hic, ab iure placeat, possimus magnam blanditiis.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="post-3" class="vesti-col timeline-post">
+                            <div class="vesti-content-wrapper">
+                                <div class="photo">
+                                    <img
+                                        src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-4_zpsazehwtua_ewyer0.jpg">
+                                    <div class="vesti-date-wrapper">
+                                        <div class="vesti-date">
+                                            <span class="day">16</span>
+                                            <br>
+                                            <span class="month">NOV</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="vesti-desc">
+                                    <a class="desc-a" href="#">
+                                        <h4>Rerum commodi</h4>
+                                    </a>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, incidunt eius
+                                        totam animi,
+                                        alias non iste similique perspiciatis aut, dolor harum dolores explicabo sunt
+                                        cum
+                                        consequatur sint maiores, ullam corrupti.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="post-4" class="vesti-col timeline-post">
+                            <div class="vesti-content-wrapper">
+                                <div class="photo">
+                                    <img
+                                        src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-3_zpsxo9mx2fx_lqohzy.jpg">
+                                    <div class="vesti-date-wrapper">
+                                        <div class="vesti-date">
+                                            <span class="day">4</span>
+                                            <br>
+                                            <span class="month">OCT</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="vesti-desc">
+                                    <a class="desc-a" href="#">
+                                        <h4>Necessitatibus velit</h4>
+                                    </a>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium quibusdam
+                                        expedita
+                                        sequi, possimus optio perferendis.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
