--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,201 +1,10 @@
-
-<!-- SERVICE SECTION -->
-<section class="services" id="services">
-    <div class="max-width">
-        <h2 class="title">My services</h2>
-        <div class="serv-content">
-            <div class="card">
-                <div class="box">
-                    <i class="fa fa-code"></i>
-                    <div class="text">Web Development</div>
-                    <p>
-                        Using Front-End libraries, I build fast, interactive websites. I
-                        use Node JS and Express app in Back-End side.
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <i class="fa fa-industry"></i>
-                    <div class="text">CAD Design</div>
-                    <p>
-                        I have a working knowledge of drafting mechanical drawings and
-                        creating 3D models in SolidWork
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <i class="fa fa-chart-bar"></i>
-                    <div class="text">Data Insights</div>
-                    <p>
-                        I am currently getting fimiliar with data science and machine
-                        learning technologies
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- SKILLS SECTION -->
-<section class="skills" id="skills">
-    <div class="max-width">
-        <h2 class="title">My skills</h2>
-        <div class="skills-content">
-            <div class="column left">
-                <div class="text">My skills & experiences.</div>
-                <p>
-                    I am currently learning from curriculum of FreeCodeCamp and
-                    youtube channel CodeWithHarry.
-                </p>
-                <a href="https://www.freecodecamp.org/sarfarazkhan" target="_blank">FreeCodeCamp<i
-                        class="fa fa-free-code-camp"></i></a>
-            </div>
-            <div class="column right">
-                <div class="bars">
-                    <div class="info">
-                        <span>Python, JavaScript</span>
-                        <span>70%</span>
-                    </div>
-                    <div class="line html"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>Front-End Development</span>
-                        <span>80%</span>
-                    </div>
-                    <div class="line css"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>Back-End Development</span>
-                        <span>65%</span>
-                    </div>
-                    <div class="line js"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>Database & Testing</span>
-                        <span>60%</span>
-                    </div>
-                    <div class="line php"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>3D-Modeling</span>
-                        <span>75%</span>
-                    </div>
-                    <div class="line mysql"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- TEAMS SECTION -->
-<section class="teams" id="teams">
-    <div class="max-width">
-        <h2 class="title">My teams</h2>
-        <div class="carousel owl-carousel">
-            <div class="card">
-                <div class="box">
-                    <img src="https://randomuser.me/api/portraits/men/3.jpg" alt="" />
-                    <div class="text">Sameer</div>
-                    <p>AI/ML Engineer</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="https://randomuser.me/api/portraits/women/2.jpg" alt="" />
-                    <div class="text">Riddhi</div>
-                    <p>Security Analyst at TCS</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="https://randomuser.me/api/portraits/men/34.jpg" alt="" />
-                    <div class="text">Prabhjot</div>
-                    <p>M.S in Industrial Engineering</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="https://randomuser.me/api/portraits/men/4.jpg" alt="" />
-                    <div class="text">Sashant</div>
-                    <p>Assistant System Engineer at TCS</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="https://randomuser.me/api/portraits/men/20.jpg" alt="" />
-                    <div class="text">Hrishikesh</div>
-                    <p>Analyst at Flex</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- CONTACT SECTION -->
-<section class="contact" id="contact">
-    <div class="max-width">
-        <h2 class="title">Contact me</h2>
-        <div class="contact-content">
-            <div class="column left">
-                <div class="text">Don't be shy</div>
-                <p>
-                    Feel free to get in touch with me. I am always open to discussing
-                    new projects, creative ideas or opportunities to be part of your
-                    visions.
-                </p>
-                <div class="icons">
-                    <div class="row">
-                        <i class="fa fa-user"></i>
-                        <div class="info">
-                            <div class="head">Name</div>
-                            <div class="sub-title">Sarfaraz Khan</div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <i class="fa fa-map-marker-alt"></i>
-                        <div class="info">
-                            <div class="head">Address</div>
-                            <div class="sub-title">Mumbai, Maharashtra</div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <i class="fa fa-envelope"></i>
-                        <div class="info">
-                            <div class="head">Email</div>
-                            <div class="sub-title">googoldkhan@gmail.com</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="column right">
-                <div class="text">Message me</div>
-                <form action="#">
-                    <div class="fields">
-                        <div class="field name">
-                            <input type="text" placeholder="Name" required />
-                        </div>
-                        <div class="field email">
-                            <input type="email" placeholder="Email" required />
-                        </div>
-                    </div>
-                    <div class="field">
-                        <input type="text" placeholder="Subject" required />
-                    </div>
-                    <div class="field textarea">
-                        <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
-                    </div>
-                    <div class="button-area">
-                        <button type="submit">Send message</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</section>
-
+<app-header></app-header>
+<app-banner></app-banner>
+<app-acerca-de></app-acerca-de>
+<app-educacion></app-educacion>
+<app-experiencia></app-experiencia>
+<app-servicios></app-servicios>
+<app-proyecto></app-proyecto>
+<app-skills></app-skills>
+<app-contacto></app-contacto>
+<app-footer></app-footer>
