--- a/src/app/components/layout/header.component.html
+++ b/src/app/components/layout/header.component.html
@@ -10,7 +10,7 @@
             <li><a href="#services" class="menu-btn">Portfolio</a></li>
             <li><a href="#skills" class="menu-btn">Skills</a></li>
             <li><a href="#contact" class="menu-btn">Contact</a></li>
-            <li><a href="#teams" class="menu-btn ">Login</a></li>
+            <li><a class="menu-btn " [routerLink]="['login']">Login</a></li>
         </ul>
         <div class="menu-btn">
             <i class="fas fa-bars"></i>
