component proyecto, separacion de componentes

--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,7 +1,7 @@
 <!-- ABOUT SECTION -->
 <section class="about" id="about">
     <div class="max-width">
-        <h2 class="title">Sobre mi</h2>
+        <h2 class="title">Sobre mí</h2>
         <div class="about-content">
             <div class="column left">
                 <img src="https://i.ibb.co/519RzY5/Profile-Toon.jpg" alt="" />
