--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -9,7 +9,7 @@
                             <div class="vesti-content-wrapper">
                                 <div class="photo">
                                     <img
-                                        src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-2_zpse1ce0jta_sktijn.jpg">
+                                        src="https://acortar.link/KxejSZ">
                                     <div class="vesti-date-wrapper">
                                         <div class="vesti-date">
                                             <span class="day">14</span>
@@ -34,7 +34,7 @@
                             <div class="vesti-content-wrapper">
                                 <div class="photo">
                                     <img
-                                        src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-1_zpsergopcgw_w5k5bz.jpg">
+                                        src="https://acortar.link/KxejSZ">
                                     <div class="vesti-date-wrapper">
                                         <div class="vesti-date">
                                             <span class="day">25</span>
