--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -1,44 +1,72 @@
-<div class="accordian">
-    <ul>
-        <li>
-            <div class="image_title">
-                <a href="https://www.youtube.com/channel/UCXTfDJ60DBmA932Du6B1ydg">KungFu Panda</a>
+<div class="container bg-white">
+    <div class="row">
+        <h2 class="text-center mt-5">Proyectos</h2>
+        <div class="col-lg-4 col-12 my-lg-4  mt-md-4 my-md-0  my-4 ">
+            <div class="row">
+                <div class="col-lg-12 col-md col-12 mb-mb-0 mb-4">
+                    <div class="image-top">
+                        <img src="../../../assets/images/Screenshot 2022-08-03 at 21-30-41 Portafolio.png"
+                            class="pic1" alt="">
+                        <div class="overlay">
+                            <p>The Al magically removes moving</p>
+                            <p>objects from videos</p>
+                            <p class="text-muted fw-light">July 19, 2019</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-md col-12">
+                    <div class="image-top">
+                        <img src="../../../assets/images/Screenshot 2022-08-03 at 21-34-00 Proyecto.png"
+                            class="pic1" alt="">
+                        <div class="overlay">
+                            <p>The Al magically removes moving</p>
+                            <p>objects from videos</p>
+                            <p class="text-muted fw-light">July 19, 2019</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <a href="https://www.youtube.com/channel/UCXTfDJ60DBmA932Du6B1ydg">
-                <img src="http://thecodeplayer.com/uploads/media/3yiC6Yq.jpg" />
-            </a>
-        </li>
-        <li>
-            <div class="image_title">
-                <a href="https://www.youtube.com/channel/UCXTfDJ60DBmA932Du6B1ydg">Toy Story 2</a>
+        </div>
+        <div class="col-lg-4 col-12 my-lg-4 mt-md-0 p-lg-0 ">
+            <div class="image-middle">
+                <img src="../../../assets/images/Screenshot 2022-08-03 at 21-26-37 Empleos G13.png"
+                    class="pic2" alt="">
+                <div class="overlay">
+                    <div class="mb-2">
+                        <span class="badge bg-danger">TRAVEL</span>
+                        <span class="badge bg-primary">FOOD</span>
+                    </div>
+                    <p>The Al magically removes moving</p>
+                    <p>objects from videos</p>
+                    <p class="text-muted fw-light">July 19, 2019</p>
+                </div>
             </div>
-            <a href="https://www.youtube.com/channel/UCXTfDJ60DBmA932Du6B1ydg">
-                <img src="http://thecodeplayer.com/uploads/media/40Ly3VB.jpg" />
-            </a>
-        </li>
-        <li>
-            <div class="image_title">
-                <a href="https://www.youtube.com/channel/UCXTfDJ60DBmA932Du6B1ydg">Wall-E</a>
+        </div>
+        <div class="col-lg-4 col-12 my-lg-4  mt-md-4 my-md-0  my-4 ">
+            <div class="row">
+                <div class="col-lg-12 col-md col-12 mb-4">
+                    <div class="image-top">
+                        <img src="../../../assets/images/Screenshot 2022-08-03 at 21-45-32 Frontend.png"
+                            class="pic1" alt="">
+                        <div class="overlay">
+                            <p>The Al magically removes moving</p>
+                            <p>objects from videos</p>
+                            <p class="text-muted fw-light">July 19, 2019</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-md col-12 ">
+                    <div class="image-top">
+                        <img src="../../../assets/images/Screenshot 2022-08-03 at 21-51-13 PracticaAngular.png"
+                            class="pic1" alt="">
+                        <div class="overlay">
+                            <p>The Al magically removes moving</p>
+                            <p>objects from videos</p>
+                            <p class="text-muted fw-light">July 19, 2019</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <a href="https://www.youtube.com/channel/UCXTfDJ60DBmA932Du6B1ydg">
-                <img src="http://thecodeplayer.com/uploads/media/00kih8g.jpg" />
-            </a>
-        </li>
-        <li>
-            <div class="image_title">
-                <a href="#">Up</a>
-            </div>
-            <a href="https://www.youtube.com/channel/UCXTfDJ60DBmA932Du6B1ydg">
-                <img src="http://thecodeplayer.com/uploads/media/2rT2vdx.jpg" />
-            </a>
-        </li>
-        <li>
-            <div class="image_title">
-                <a href="#">Cars 2</a>
-            </div>
-            <a href="https://www.youtube.com/channel/UCXTfDJ60DBmA932Du6B1ydg">
-                <img src="http://thecodeplayer.com/uploads/media/8k3N3EL.jpg" />
-            </a>
-        </li>
-    </ul>
+        </div>
+    </div>
 </div>
