--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -1,5 +1,5 @@
 <!-- SERVICE SECTION -->
-<section class="services" id="services">
+<section class="services mt-5" id="services">
     <div class="max-width">
         <h2 class="title">Mis servicios</h2>
         <div class="serv-content">
