--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,10 +1,10 @@
 <!-- SKILLS SECTION -->
-<section class="skills" id="skills">
+<section class="skills mb-5" id="skills">
     <div class="max-width">
-        <h2 class="title">My skills</h2>
+        <h2 class="title">Mis skills</h2>
         <div class="skills-content">
             <div class="column left">
-                <div class="text">My skills & experiences.</div>
+                <div class="text">Mis skills & experiencia.</div>
                 <p>
                     I am currently learning from curriculum of FreeCodeCamp and
                     youtube channel CodeWithHarry.
@@ -15,8 +15,8 @@
             <div class="column right">
                 <div class="bars">
                     <div class="info">
-                        <span>Python, JavaScript</span>
-                        <span>70%</span>
+                        <span> Java</span>
+                        <span>80%</span>
                     </div>
                     <div class="line html"></div>
                 </div>
@@ -30,7 +30,7 @@
                 <div class="bars">
                     <div class="info">
                         <span>Back-End Development</span>
-                        <span>65%</span>
+                        <span>85%</span>
                     </div>
                     <div class="line js"></div>
                 </div>
