--- a/src/app/components/educacion/educacion.component.css
+++ b/src/app/components/educacion/educacion.component.css
@@ -32,7 +32,7 @@ a {
   .vertical-line::after {
     top: -10px;
     right: 50%;
-    background-color: #a6a6a6;
+    background-color: #DC143C;
     overflow: hidden;
     position: absolute;
     content: "";
@@ -45,7 +45,7 @@ a {
   .vertical-line::before {
     top: -10px;
     right: 50%;
-    background-color: #a6a6a6;
+    background-color: #DC143C;
     overflow: hidden;
     position: absolute;
     content: "";
@@ -56,7 +56,7 @@ a {
   }
   .vesti-date-wrapper::before {
     top: 50%;
-    background-color: #a6a6a6;
+    background-color: #DC143C;
     overflow: hidden;
     position: absolute;
     content: "";
@@ -106,19 +106,19 @@ a {
   border-style: solid;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  border-color: #a6a6a6;
+  border-color: #DC143C;
 }
 
 .vesti-date-wrapper .vesti-date .day {
   font-size: 20px;
-  color: #2d3e4f;
+  color: #DC143C;
   line-height: 0px;
   display: block;
 }
 
 .vesti-date-wrapper .vesti-date .month {
   font-size: 12px;
-  color: #2d3e4f;
+  color: #DC143C;
   line-height: 0px;
   display: block;
   text-transform: uppercase;
@@ -170,7 +170,7 @@ a {
 }
 
 .vesti-desc h4:hover {
-  color: #00b388 !important;
+  color: #DC143C !important;
 }
 
 .vesti-desc p {
