boton volver atras login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,8 @@
 <div class="bg-img">
     <div class="content">
+        <button class="btn btn-lg btn-primary  mb-3 p-3" (click)="volver()"><i class="fa fa-arrow-circle-left"
+                aria-hidden="true">         Volver </i>
+        </button>
         <header>Login Form</header>
         <form action="#">
             <div class="field">
