--- a/src/app/components/layout/header.component.html
+++ b/src/app/components/layout/header.component.html
@@ -10,7 +10,8 @@
             <li><a href="#skills" class="menu-btn">Skills</a></li>
             <li><a href="#services" class="menu-btn">Portfolio</a></li>
             <li><a href="#contact" class="menu-btn">Contact</a></li>
-            <li><a class="menu-btn " [routerLink]="['login']">Login</a></li>
+            <li><a class="menu-btn " (click)="login()" *ngIf="!isLogged">Login</a></li>
+            <li><a class="menu-btn " (click)="logout()" *ngIf="isLogged">Cerrar Cesion</a></li>
         </ul>
         <div class="menu-btn">
             <i class="fas fa-bars"></i>
