--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
                 <a href="#">Forgot Password?</a>
             </div>
             <div class="field">
-                <input type="submit" value="LOGIN">
+                <input type="submit" (click)="login()" value="LOGIN">
             </div>
         </form>
         <div class="login">Or login with</div>
