mejora visual de skills

--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -16,7 +16,7 @@
                 <div class="bars" *ngFor="let skill of habilidades">
                     <div class="info">
                         <span> {{skill.nombreHab}}</span>
-                        <span>80%</span>
+                        <span>{{skill.porcentaje}}%</span>
                     </div>
                     <div class="line html"></div>
                 </div>
